<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    
    <TextView 
        android:id="@+id/edit_product_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>
    
    <TextView 
        android:id="@+id/edit_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    
    <TextView 
  	    android:id="@+id/edit_product_validation"
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:text="@string/edit_product_validation"
  	    android:textColor="#ff0000"
  	    android:paddingBottom="5dp"
  	    android:visibility="gone" />

   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content">
   	    
   	    <LinearLayout 
   	        android:layout_width="0dp"
   	        android:layout_weight="3"
   	        android:layout_height="wrap_content"
   	        android:orientation="vertical">
   	        
   	        <LinearLayout
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:orientation="vertical"
   	            android:paddingBottom="5dp">
   	            
   	            <TextView 
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:text="@string/edit_product_name_text"/>
   	            
   	            <EditText 
   	                android:id="@+id/edit_product_name"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:inputType="text"
   	                android:ems="10"/>
   	            
   	        </LinearLayout>
   	        
   	        <LinearLayout
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:orientation="vertical"
   	            android:paddingBottom="5dp">
   	            
   	            <TextView 
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:text="@string/edit_product_description_text"/>
   	            
   	            <EditText 
   	                android:id="@+id/edit_product_description"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:inputType="text"
   	                android:ems="10"/>
   	            
   	        </LinearLayout>
   	        
   	        <LinearLayout
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:orientation="vertical"
   	            android:paddingBottom="5dp">
   	            
   	            <TextView 
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:text="@string/edit_product_price_text"/>
   	            
   	            <EditText 
   	                android:id="@+id/edit_product_price"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:inputType="text"
   	                android:ems="10"/>
   	            
   	        </LinearLayout>
   	        
   	        <LinearLayout
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:orientation="vertical"
   	            android:paddingBottom="5dp">
   	            
   	            <TextView 
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:text="@string/edit_product_category_text"/>
   	            
   	            <EditText 
   	                android:id="@+id/edit_product_category"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:inputType="text"
   	                android:ems="10"/>
   	            
   	        </LinearLayout>
   	        
   		</LinearLayout>
   		
   		<LinearLayout
   		    android:layout_width="0dp"
   	        android:layout_weight="2"
   	        android:layout_height="wrap_content"
   	        android:orientation="vertical">
   	        
   		    <ImageView 
   		        android:id="@+id/edit_product_image"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:layout_gravity="center" />
   		    
   		    <Button 
   		        android:id="@+id/edit_product_insert_image"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:text="@string/button_edit_product_insert_image"
   		        android:layout_gravity="center" />
   		    
   		</LinearLayout>
   		
   	</LinearLayout>
   	
   	<LinearLayout 
   	    android:layout_width="match_parent"
   	    android:layout_height="fill_parent"
   	    android:orientation="vertical"
   	    android:gravity="bottom">
   		
   	    <Button
   	        android:id="@+id/edit_product_save"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="right"
   	        android:text="@string/button_edit_product_save" />
   	    
   	</LinearLayout>

</LinearLayout>
